.metadata/.plugins/org.eclipse.cdt.ui/practica2.build.log
18:47:45 **** Incremental Build of configuration Debug for project practica2 ****
make -j16 all 
arm-none-eabi-gcc "../Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L475xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.d" -MT"Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.o"
arm-none-eabi-gcc "../Core/Src/hd44780.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L475xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/hd44780.d" -MT"Core/Src/hd44780.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/hd44780.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L475xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32l4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L475xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32l4xx_hal_msp.d" -MT"Core/Src/stm32l4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32l4xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32l4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L475xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32l4xx_it.d" -MT"Core/Src/stm32l4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32l4xx_it.o"
In file included from ../Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c:21:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h:985:22: error: conflicting types for 'HAL_GPIO_WritePin'; have 'void(GPIO_TypeDef *, uint32_t)' {aka 'void(GPIO_TypeDef *, long unsigned int)'}
  985 | __STATIC_INLINE void HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint32_t PinMask)
      |                      ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:262,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4xx.h:288,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h:28:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h:296:19: note: previous declaration of 'HAL_GPIO_WritePin' with type 'void(GPIO_TypeDef *, uint16_t,  GPIO_PinState)' {aka 'void(GPIO_TypeDef *, short unsigned int,  GPIO_PinState)'}
  296 | void              HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |                   ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/main.h:32,
                 from ../Core/Src/hd44780.c:3:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h:985:22: error: conflicting types for 'HAL_GPIO_WritePin'; have 'void(GPIO_TypeDef *, uint32_t)' {aka 'void(GPIO_TypeDef *, long unsigned int)'}
  985 | __STATIC_INLINE void HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint32_t PinMask)
      |                      ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:262,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h:296:19: note: previous declaration of 'HAL_GPIO_WritePin' with type 'void(GPIO_TypeDef *, uint16_t,  GPIO_PinState)' {aka 'void(GPIO_TypeDef *, short unsigned int,  GPIO_PinState)'}
  296 | void              HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |                   ^~~~~~~~~~~~~~~~~
make: *** [Drivers/STM32L4xx_HAL_Driver/Src/subdir.mk:97: Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../Core/Inc/main.h:32,
                 from ../Core/Src/main.c:20:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h:985:22: error: conflicting types for 'HAL_GPIO_WritePin'; have 'void(GPIO_TypeDef *, uint32_t)' {aka 'void(GPIO_TypeDef *, long unsigned int)'}
  985 | __STATIC_INLINE void HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint32_t PinMask)
      |                      ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:262,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h:296:19: note: previous declaration of 'HAL_GPIO_WritePin' with type 'void(GPIO_TypeDef *, uint16_t,  GPIO_PinState)' {aka 'void(GPIO_TypeDef *, short unsigned int,  GPIO_PinState)'}
  296 | void              HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |                   ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/main.h:32,
                 from ../Core/Src/stm32l4xx_hal_msp.c:22:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h:985:22: error: conflicting types for 'HAL_GPIO_WritePin'; have 'void(GPIO_TypeDef *, uint32_t)' {aka 'void(GPIO_TypeDef *, long unsigned int)'}
  985 | __STATIC_INLINE void HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint32_t PinMask)
      |                      ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:262,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h:296:19: note: previous declaration of 'HAL_GPIO_WritePin' with type 'void(GPIO_TypeDef *, uint16_t,  GPIO_PinState)' {aka 'void(GPIO_TypeDef *, short unsigned int,  GPIO_PinState)'}
  296 | void              HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |                   ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/main.h:32,
                 from ../Core/Src/stm32l4xx_it.c:21:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h:985:22: error: conflicting types for 'HAL_GPIO_WritePin'; have 'void(GPIO_TypeDef *, uint32_t)' {aka 'void(GPIO_TypeDef *, long unsigned int)'}
  985 | __STATIC_INLINE void HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint32_t PinMask)
      |                      ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:262,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h:296:19: note: previous declaration of 'HAL_GPIO_WritePin' with type 'void(GPIO_TypeDef *, uint16_t,  GPIO_PinState)' {aka 'void(GPIO_TypeDef *, short unsigned int,  GPIO_PinState)'}
  296 | void              HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |                   ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/hd44780.o] Error 1
../Core/Src/main.c:140:6: warning: 'snake_up2' defined but not used [-Wunused-function]
  140 | void snake_up2(int i){
      |      ^~~~~~~~~
../Core/Src/main.c:127:6: warning: 'snake_down2' defined but not used [-Wunused-function]
  127 | void snake_down2(int i){
      |      ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/stm32l4xx_hal_msp.o] Error 1
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
make: *** [Core/Src/subdir.mk:37: Core/Src/stm32l4xx_it.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

18:47:45 Build Failed. 11 errors, 2 warnings. (took 394ms)

